# ingestion_engine_project

./: .gitignore  README.md  data_generation.ipynb  pyproject.toml  requirements.txt  whole_requirements.txt
config/: climate_config.json  inventory_config.json  logistics_config.json  online_sales_config.json
config/bronze/: client_real_time_config.json  climate_config.json  images_config.json  inventory_config.json  iot_sensors_config.json  logistics_config.json  online_sales_config.json
config/confluent_kafka/: client_properties
config/gold/: climate_impact_config.json  order_fulfillment_performance_config.json  sales_volume_config.json
config/silver/: climate_config.json  inventory_config.json  iot_sensors_config.json  logistics_config.json  online_sales_config.json
data_generation/: batch_data_generation.ipynb  streaming_data_generation.ipynb
databricks_notebooks/: Bronze.dbc  Gold.dbc  Silver.dbc
src/bronze/: __init__.py  ingest_engine.py  registry.py
src/bronze/ingestors/: __init__.py  base.py  batch_ingestor.py  streaming_ingestor.py
src/gold/: __init__.py  aggregation_engine.py  registry.py
src/gold/aggregators/: __init__.py  base.py  climate_impact.py  order_fulfillment_performance.py  sales_volume.py
src/silver/: __init__.py  process_engine.py  registry.py
src/silver/processors/: __init__.py  base.py  climate_processor.py  inventory_processor.py  iot_processor.py  logistics_processor.py  sales_processor.py
